# pydantic-stock-agent

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BACKEND.md  CLAUDE.md  DECISIONS.md  GLOSSARY.md  MCP_SERVER.md  QA.md  README.md  TASKS.md  alembic.ini  demo.py  pyproject.toml  stock_mcp_server.py
.claude/: commit-protocol.md  settings.json
.claude/agents/: aria.md  rex.md  ui-designer.md
.claude/agents/logs/: backend-worklog.md  ui-designer-worklog-archive.md  ui-designer-worklog.md
.claude/hooks/: post_commit_next_step.py  pre_commit_check.py
.claude/skills/backend/: SKILL.md
.claude/skills/ui-designer/: SKILL.md
docs/: demo-transcript.md
migrations/: env.py
migrations/versions/: d730c3884ddb_create_stock_reports_and_analysis_jobs_.py
scripts/: test_agent_wiring.py
src/stock_agent/: agent.py  api.py  cli.py  config.py  main.py  mock_data.py
src/stock_agent/db/: __init__.py  crud.py  models.py  session.py
src/stock_agent/models/: context.py  report.py
src/stock_agent/pipelines/: __init__.py
src/stock_agent/pipelines/fundamental/: __init__.py  web_search.py  yf_client.py
src/stock_agent/pipelines/technical/: __init__.py  core_data.py
src/stock_agent/pipelines/technical/indicators/: __init__.py  macd.py  moving_averages.py  trend_setups.py
src/stock_agent/scoring/: __init__.py  fundamental_scorer.py  technical_scorer.py
src/stock_agent/tools/: __init__.py  fundamental_tools.py  technical_tools.py
src/stock_agent/ui/: app.py  theme.py
src/stock_agent/ui/components/: peer_table.py  progress_panel.py  report_card.py  strategy_panel.py
src/stock_agent/worker/: __init__.py  celery_app.py
tests/: __init__.py  test_api.py  test_cli_demo.py  test_core_data.py  test_db.py
