[project]
name = "stock-agent"
version = "0.1.0"
description = "Autonomous PydanticAI Stock Analyst Agent"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.1",
    "httpx[asyncio]>=0.28.1",
    "logfire>=4.29.0",
    "pydantic>=2.7",
    "pydantic-ai>=0.0.14",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "yfinance>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_agent"]
